services/product-service/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:
  selector:
    app: product-service

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080

  type: NodePort
