services/product-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: product-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: api.ecommerce.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: product-service
            port:
              number: 8000
